# Solana-ballot

./: .gitattributes  .gitignore  README.md
circuits/: Cargo.toml
circuits/src/: ballot_validity.rs  lib.rs  merkle_membership.rs  nullifier.rs  poseidon_params.rs  vote_commitment.rs
client/: package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  solana_ballot.json  solana_ballot.ts
client/src/components/: DevModeNotice.tsx  ProposalCard.tsx  StatusBadge.tsx  TxButton.tsx  WalletButton.tsx
client/src/hooks/: useProgram.ts  useProposal.ts
client/src/lib/: anchor.ts  devProof.ts  notifications.ts  pda.ts
client/src/panels/: AdminPanel.tsx  ResultsView.tsx  VoterPanel.tsx
program/: Anchor.toml  Makefile  package.json
program/programs/solana_ballot/: Cargo.toml  build.rs
program/programs/solana_ballot/src/: constants.rs  lib.rs  merkle.rs
program/programs/solana_ballot/src/error/: mod.rs
program/programs/solana_ballot/src/instructions/: cast_vote.rs  close_commitment_record.rs  close_proposal.rs  close_vk.rs  close_vote_accounts.rs  close_voting.rs  create_proposal.rs  expire_proposal.rs  finalize_tally.rs  initialize.rs  mod.rs  open_voting.rs  register_commitment.rs  register_voter.rs  replace_vk.rs  reveal_vote.rs  store_vk.rs
program/programs/solana_ballot/src/state/: mod.rs  program_config.rs  proposal.rs  root_history.rs  vk.rs  vote.rs
program/tests/: program.ts  security.ts
