[package]
name = "solana_ballot"
version = "0.1.0"
description = "ZK-powered private voting system for Solana DAOs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_ballot"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
