[package]
name = "solana_ballot"
version = "0.1.0"
description = "ZK-powered private voting system for Solana DAOs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_ballot"

[features]
# `dev` is a default feature that enables the proof-verification bypass for local testing.
# For production deploy, always build with: anchor build --no-default-features
# The build.rs script emits a visible warning reminding you of this on every dev build.
default = ["dev"]
dev = []                            # Enables proof-verification bypass when VK is absent
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang           = { version = "0.32.0" }
groth16-solana        = "0.2"    # Groth16 verifier using Solana alt_bn128 syscalls
sha3                  = { version = "0.10", default-features = false }  # Keccak-256 for PDA seeds (BPF-compatible, no_std)
# Poseidon hash:
#   - On BPF target: sol_poseidon syscall via solana-define-syscall (zero stack allocation)
#   - On native target: light-poseidon (for unit tests; no BPF stack limit applies)
solana-define-syscall = "2"      # Exposes sol_poseidon syscall for BPF target
light-poseidon        = "0.2"    # Poseidon for native/test target
ark-bn254             = "0.4"    # BN254 field element type used by light-poseidon


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
